# second-hw

./: .gitignore  CMakeLists.txt  factorial.cpp  factorial.h  main.cpp  my_allocator.h  printer.h  simple_vector.h  tests.cpp
.github/workflows/: release.yml
